--- a/wwr/Styles/style.css
+++ b/wwr/Styles/style.css
@@ -7,7 +7,7 @@ nav a {
     text-decoration: none;
 }
 nav a:hover {
-    background-color: #95dce5;
+    background-color: rgba(20, 30, 13, .7);
     color: #000000;
 }
 #content {
@@ -16,7 +16,7 @@ nav a:hover {
 }
 #background {
     height: 725px;
-    background-color: #95dce5;
+    background-color: rgba(20, 30, 13, .7);
 }
 #hero-msg h1 {
     text-align: center; 
@@ -34,10 +34,10 @@ main section {
     text-align: center; 
 }
 body {
-    background-color: rgb(255, 255, 255);
+    background-color: white;
 }
 header {
-    background-color: #000000;
+    background-color:rgba(20, 30, 13, .7);
 }
 footer {
     background-color: #000000;
@@ -59,25 +59,25 @@ footer p a:hover {
     text-decoration: underline;
 }
 .book {
-    background-color: #95dce5;
+    background-color: rgba(183, 122, 24, 0.7);
     color: #114b5f;
     text-decoration: none;
 }
 .book:hover {
-    background-color: #95dce5;
+    background-color: rgba(183, 122, 24, 0.7);
     color: #000000;
 }
 .join {
-    background-color: #95dce5;
+    background-color: rgba(127, 190, 206, 0.7);
     color: #114b5f;
     text-decoration: none;
 }
 .join:hover {
-    background-color: #95dce5;
-    color: #000000;
+    background-color: rgba(183, 122, 24, 0.7);
+    color: rgba(20, 30, 13, .7);
 }
 .msg {
-    background-color: #000000;
+    background-color: rgba(183, 122, 24, 0.7);
 }
 .msg h2 {
     color: #114b5f;
