--- a/wwr/Styles/style.css
+++ b/wwr/Styles/style.css
@@ -2,9 +2,10 @@ h4 {
     color: #114b5f;
 }
 nav a {
-    text-align: center; 
-    color: #114b5f;
     text-decoration: none;
+    color: #fcfbfb;
+    text-align: center;
+    padding: 35px;
 }
 nav a:hover {
     background-color: rgba(20, 30, 13, .7);
@@ -37,7 +38,11 @@ body {
     background-color: rgb(255, 255, 255);
 }
 header {
-    background-color:rgba(20, 30, 13, .7);
+    background-color: #fcfbfb;
+    font-family: Raleway, Arial, sans-serif;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
 }
 footer {
     background-color: #000000;
@@ -62,6 +67,9 @@ footer p a:hover {
     background-color: rgba(183, 122, 24, 0.7);
     color: #114b5f;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
 }
 .book:hover {
     background-color: rgba(183, 122, 24, 0.7);
@@ -93,4 +101,10 @@ footer p a:hover {
 }
 .logo {
     width: 80px;
+}
+.card-img {
+    border: 10px solid #d9c2a3;
+}
+main section img {
+    box-sizing: border-box;
 }
