--- a/wwr/Styles/style.css
+++ b/wwr/Styles/style.css
@@ -7,6 +7,13 @@ nav a {
     text-align: center;
     padding: 35px;
 }
+
+nav {
+    display: flex;
+    justify-content: space-around; 
+}
+
+
 nav a:hover {
     background-color: rgba(20, 30, 13, .7);
     color: #000000;
@@ -24,6 +31,7 @@ nav a:hover {
 }
 #hero-msg h4 {
     text-align: center; 
+    color: white;
 }
 #hero-img {
     width: 100%;
@@ -38,6 +46,8 @@ body {
     background-color: rgb(255, 255, 255);
 }
 header {
+    display: grid;
+    grid-template-columns: 150px auto;
     background-color: #fcfbfb;
     font-family: Raleway, Arial, sans-serif;
     font-size: 22px;
@@ -45,7 +55,28 @@ header {
     padding: 0;
 }
 footer {
-    background-color: #000000;
+    background-color:#C9ADA7;
+    color:#000;
+    padding: 25px 50px;
+    margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+    z-index: -1;
+}
+             
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+#hero-msg h4 {
+    color: white;
 }
 footer h3 {
     color: #114b5f;
@@ -85,10 +116,24 @@ footer p a:hover {
     color: rgba(20, 30, 13, .7);
 }
 .msg {
-    background-color: rgba(183, 122, 24, 0.7);
+    background-color: #6f7364;
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 .msg h2 {
     color: #114b5f;
+}
+
+#logo_link {
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+}
+.icon {
+    width: 80px;
+    padding-top: 10px;
 }
 .msg p {
     color: #114b5f;
@@ -102,9 +147,90 @@ footer p a:hover {
 .logo {
     width: 80px;
 }
+
 .card-img {
     border: 10px solid #d9c2a3;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+.card-img, .mountains {
+    width: 100%;
+}
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+.mountains {
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 main section img {
     box-sizing: border-box;
+}
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .msg {
+        background-color: #6f7364;
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 200px 0;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+    background-color: #6f7364;
+    padding: 25px 50px;
+    margin-top: 200px; 
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    }
 }
