--- a/wwr/Styles/style.css
+++ b/wwr/Styles/style.css
@@ -16,7 +16,7 @@ nav {
 
 nav a:hover {
     background-color: rgba(20, 30, 13, .7);
-    color: #000000;
+    color: #ffffff;
 }
 #content {
     max-width: 1600px;
@@ -43,12 +43,12 @@ main section {
     text-align: center; 
 }
 body {
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
 }
 header {
     display: grid;
     grid-template-columns: 150px auto;
-    background-color: #fcfbfb;
+    background-color: #131212;
     font-family: Raleway, Arial, sans-serif;
     font-size: 22px;
     margin: 0;
@@ -86,7 +86,7 @@ footer a {
     text-decoration: none;
 }
 footer a:hover {
-    color: #000000;
+    color: #ffffff;
 }
 footer p {
     font-size: 1.2em;
@@ -104,7 +104,7 @@ footer p a:hover {
 }
 .book:hover {
     background-color: rgba(183, 122, 24, 0.7);
-    color: #000000;
+    color: #ffffff;
 }
 .join {
     background-color: rgba(127, 190, 206, 0.7);
@@ -232,5 +232,92 @@ main section img {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    }
+}
+/*Sub Page*/
+
+.title-aboutus {
+    text-align: center;
+}
+.title-aboutus h2 {
+    margin-top: 70px;
+}
+.title-aboutus img {
+    width: 50%;
+}
+
+.aboutus-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    text-align: center;
+    box-sizing: content-box;
+    
+    
+}
+.question{
+    border-radius: 25px;
+    background: #C9ADA7;
+    margin: 20px;
+    word-wrap: break-word;
+    vertical-align: middle;
+    
+
+}
+.aboutus-grid .question h3  {
+    font-size: 35px;
+    padding: 10px;
+}
+.aboutus-grid .question p {
+    font-size: 20px;
+    padding: 10px;
+}
+.aboutus-grid .question li {
+    font-size: 20px;
+}
+
+
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
     }
 }
