--- a/PSite/styles/site-plan.css
+++ b/PSite/styles/site-plan.css
@@ -24,6 +24,7 @@
 }
 
 body {
+  background-color: rgb(0, 0, 0);
   max-width: 1200px;
   margin: 0 auto;
   padding: 4em;
@@ -33,6 +34,7 @@ body {
 img {
   display: block;
   margin: 0 auto;
+
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: var(--heading-font);
