--- a/PSite/styles/style.css
+++ b/PSite/styles/style.css
@@ -1,32 +1,37 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif&family=PT+Serif:ital@0;1&display=swap');
-/* NAV AND HEADER */
-nav a{
-  text-align:center;
-  color:#ffffff;
-  text-decoration:none;
-  padding: 40px;
 
+/* NAV AND HEADER */
+nav a {
+  text-align: center;
+  color: #ffffff;
+  text-decoration: none;
+  padding: 20px;
 }
+
 nav {
   display: flex;
-  justify-content: center; 
+  justify-content: center;
 }
+
 #logo_link {
   padding-top: 5px;
   justify-self: center;
   align-self: center;
 }
+
 .logo {
-width:80px;
+  width: 80px;
 }
+
 header {
-  background-color:#146C94;
+  background-color: #146C94;
   display: grid;
   grid-template-columns: 150px auto;
 }
+
 nav a:hover {
-  background-color:#19A7CE;
-  color:#FFF;
+  background-color: #19A7CE;
+  color: #fff;
 }
 
 /* BODY */
@@ -34,67 +39,193 @@ nav a:hover {
   text-align: center;
   font-family: sans-serif;
 }
+
 .home-picture {
   width: 50%;
   border: 10px solid #ffffff;
 }
+
 .home-grid {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(1, 1fr);
   text-align: center;
-  box-sizing: border-box;  
+  box-sizing: border-box;
 }
-.title-home {
-  text-align: center;
-}
+
 .title-home h2 {
   margin-top: 70px;
 }
-.info{
+
+.info {
   border-radius: 35px;
-  background: #146C94;
-  margin: 25px;
+  margin: 30px;
   word-wrap: break-word;
-  vertical-align: middle;
+  text-align: left;
 }
-.home-grid .info h3  {
+
+.home-grid .info h3 {
   font-size: 16px;
   padding: 10px;
 }
-.home-grid .info p {
-  font-size: 14px;
-  padding: 10px;
-}
+
+.home-grid .info p,
 .home-grid .info li {
   font-size: 14px;
   padding: 10px;
 }
-body
-{
+
+body {
   font-family: "Times New Roman", sans-serif;
   background: rgb(0, 0, 0);
-  color: black;
+  color: #fcffff;
   text-align: center;
 }
+
 /*Page2*/
+/* Style the button that is used to open and close the collapsible content */
+.attack-container .attack-info table {
+  border: none;
+  overflow: auto;
+  width: 100%;
+  text-align: center;
+  margin: 0;
+}
 
+.citizen-table-wrapper {
+  overflow-x: auto;
+}
 
+.frame-data-recovery {
+  background-color: #6aafd7;
+}
 
+.frame-data-active {
+  background-color: #ff5d5d;
+}
 
+.frame-data-startup {
+  background-color: #36b37e;
+}
+
+.frame-data-startup,
+.frame-data-active,
+.frame-data-inactive,
+.frame-data-recovery,
+.frame-data-specialRecovery {
+  width: 10px;
+  height: 10px;
+  display: inline-block;
+  margin-left: 1px;
+  margin-right: 1px;
+  vertical-align: middle;
+}
+
+.collapsible {
+  background-color: #146c94;
+  color: #ffffff;
+  cursor: pointer;
+  padding: 10px;
+  width: auto;
+  border-radius: 35px;
+  text-align: center;
+  outline: black;
+  font-size: 25px;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active,
+.collapsible:hover {
+  background-color: #2bbaa7;
+}
+
+/* Style the collapsible content. Note: hidden by default */
+.content {
+  border-radius: 35px;
+  padding: 10px 18px;
+  display: none;
+  overflow: hidden;
+  background-color: #146c94;
+}
+
+.frame-data {
+  text-align: center;
+  font-family: sans-serif;
+}
+
+.frame-picture {
+  width: 50%;
+  height: 50%;
+  border: 10px solid #26413c;
+}
+
+.framedata-grid {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  text-align: center;
+  box-sizing: border-box;
+  align-items: center;
+  justify-items: center;
+}
+
+.frame-data h2 {
+  margin-top: 70px;
+}
+
+.information {
+  margin: 30px;
+  text-align: left;
+}
+
+.framedata-grid .information h3 {
+  font-size: 16px;
+  padding: 10px;
+}
+
+.framedata-grid .information p,
+.framedata-grid .information li {
+  font-size: 14px;
+  padding: 10px;
+}
+
+/*page3*/
+.home-grid--col3 {
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.home-link {
+  display: grid;
+  margin-top: 6px;
+  font-size: 0.875rem;
+  font-weight: 500;
+  grid-gap: 6px;
+  text-align: center;
+}
+
+.home-link__button {
+  display: flex;
+}
+.home-link__button a {
+  flex-grow: 1;
+  padding: 10px 18px;
+  background: #146c94;
+  border-radius: 35px;
+  color: var(--color-base--emphasized);
+}
 
 /* FOOTER */
 footer {
-  background-color:#146C94;
-  color:#ffffff;
+  background-color: #146c94;
+  color: #ffffff;
   padding: 25px 50px;
   margin-top: 200px;
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
+
 footer a {
-  color:#ffffff;
-  text-decoration:none;
+  color: #ffffff;
+  text-decoration: none;
 }
 
 footer p {
@@ -106,8 +237,9 @@ footer p a:hover {
 }
 
 footer a:hover {
-  color:#FFF;
+  color: #fff;
 }
+
 footer .social img {
   padding-top: 15px;
 }
