--- a/PSite/styles/style.css
+++ b/PSite/styles/style.css
@@ -107,8 +107,8 @@ body {
 }
 .home-grid {
   display: grid;
-  grid: auto-flow dense/repeat(auto-fit,minmax(9.375rem,1fr));
-  grid-auto-rows: minmax(3rem,auto);
+  grid-template-columns: repeat(auto-fit, minmax(9.375rem, 1fr));
+  grid-auto-rows: minmax(3rem, auto);
   grid-gap: 0.625rem;
 }
 #home-content {
